--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,10 +1,10 @@
 :root {
-  --ion-color-primary: #3d347f;
-  --ion-color-primary-rgb: 61, 52, 127;
+  --ion-color-primary: #3880ff;
+  --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #362e70;
-  --ion-color-primary-tint: #50488c;
+  --ion-color-primary-shade: #3171e0;
+  --ion-color-primary-tint: #4c8dff;
 
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
